# deadcodeelimination

./: CMakeLists.txt  README.md  README.txt  build.sh  execute.sh
TestFiles/B/: BTest.cpp  BTest.ll
TestFiles/Test2/: ._Z3foov.dot  Test2.cpp  Test2.ll
TestFiles/signed_notequal/: signed_notequal.c  signed_notequal.ll
TestFiles/signed_orequal/: signed_orequal.c  signed_orequal.ll
TestFiles/unsigned_equal/: unsigned_equal.c  unsigned_equal.ll
TestFiles/unsigned_notequal/: unsigned_notequal.c  unsigned_notequal.ll
dot_files/Test1/: _Z3foov.dot
dot_files/Test2/: _Z3fooi.dot
dot_files/Test3/: main.dot
dot_files/signed_notequal/: .main.dot  main.dot
dot_files/signed_orequal/: .main.dot  main.dot
dot_files/unsigned_equal/: .main.dot  main.dot
dot_files/unsigned_notequal/: .main.dot  main.dot
lib/DeadCodeAnalysis/: ClientRA.cpp  DeadCodeAnalysis.cpp  RangeAnalysis.cpp  vSSA.cpp
lib/DeadCodeAnalysis/include/: DeadCodeAnalysis.h  RangeAnalysis.h
